# SmudgeLord

./: .env.example  .env.exemple  .gitignore  .pre-commit-config.yaml  Procfile  PyroSmudge.session  README.md  README.rst  config.json.example  crowdin.yml  example.config.py  go.mod  go.sum  main.go  nltk.txt  packages.txt  pyproject.toml  requirements.txt  sample_config.yml  smudge.session-journal  twitter-analyzer-enhanced.html
.github/: dependabot.yml
cmd/smudgelord/: main.go  setup.go
deeppyer/: __init__.py
haruka/: __init__.py  __main__.py  events.py
haruka/modules/: __init__.py  admin.py  afk.py  android.py  antiflood.py  antispam.py  backups.py  bans.py  blacklist.py  connection.py  cust_filters.py  direct_links.py  disable.py  feds.py  keyboard.py  language.py  last_fm.py  locks.py  log_channel.py  memes.py  misc.py  msg_deleting.py  muting.py  notes.py  orangefox.py  remote_cmds.py  reporting.py  rules.py  sed.py  stickers.py  translator.py  urlblacklist.py  userinfo.py  users.py  warns.py  welcome.py
haruka/modules/helper_funcs/: __init__.py  chat_status.py  extraction.py  filters.py  handlers.py  misc.py  msg_types.py  string_handling.py
haruka/modules/locales/: en-GB.yml  en-US.yml  fr.yml  ru.yml
haruka/modules/sql/: __init__.py  admin_sql.py  afk_sql.py  antiflood_sql.py  antispam_sql.py  blacklist_sql.py  connection_sql.py  cust_filters_sql.py  disable_sql.py  feds_sql.py  global_mutes_sql.py  locales_sql.py  locks_sql.py  log_channel_sql.py  notes_sql.py  redis.py  reporting_sql.py  (+8 more)
internal/config/: config.go
internal/database/: database.go  database_test.go
internal/localization/: localization.go
internal/modules/: loader.go  loaders.go
internal/telegram/: bot.go  bot_handler.go  bot_updates.go  client.go
internal/utils/: error_report.go  handlers.go  help-menu.go  help_menu.go  images.go  request.go  retry.go  strings.go
locales/: README.rst  bot.pot  en-GB.yml  en-US.yml  en-us.json  en-us.yaml  en.yml  en_US.yaml  es.yml  es_ES.yaml  fr.yml  hi.yml  id.yml  id_ID.yaml  pt-br.json  pt-br.yaml  pt_BR.yaml  ru.yml  ru_RU.yaml  zh-CN.yml
manchas/ módulos/: notes.py  warns.py
smudge/: __init__.py  __main__.py  bot.py  config.py  events.py  example.config.py  sample_config.py  smudge.py  tbot.py
smudge/database/: __init__.py  afk.py  chats.py  core.py  lastfm.py  locale.py  locales.py  medias.py  music.py  start.py  users.py  videos.py
smudge/helper_funcs/: alternate.py  chat_status.py  extraction.py  filters.py  git_api.py  handlers.py  misc.py  msg_types.py  string_handling.py  user_perm.py
smudge/locales/: __init__.py  de-DE.yml  en-US.yml  en-us.yml  es-ES.yml  fr-FR.yml  he-IL.yml  it-IT.yml  pl-PL.yml  pt-BR.yml  pt-br.yml  ru-RU.yml  strings.py  zh-CN.yml
smudge/modules/: Android.py  PyroStickers.py  __init__.py  admin.py  afk.py  android.py  antiflood.py  antispam.py  backups.py  bans.py  blacklist.py  blstickers.py  chatbot.py  connection.py  cust_filters.py  direct_links.py  disable.py  feds.py  github.py  keyboard.py  langague.py  language.py  last_fm.py  locks.py  log_channel.py  memes.py  misc-pyrogram.py  misc-telethon.py  misc.py  msg_deleting.py  muting.py  notes.py  orangefox.py  pyro-misc.py  pyrostickers.py  reactions.py  remote_cmds.py  reporting.py  reverseimage.py  rules.py  (+17 more)
smudge/plugins/: __init__.py  __main__.py  admin.py  afk.py  android.py  chats.py  github.py  langs.py  lastfm.py  locale.py  locales.py  medias.py  memes.py  misc.py  music.py  sed.py  start.py  stickers.py  sudoers.py  translate.py  videos.py  youtube.py  ytdl.py
smudge/utils/: __init__.py  help_menu.py  lastfm.py  locale.py  locales.py  logger.py  medias.py  misc.py  music.py  pyrofilters.py  utils.py  videos.py
smudgelord/: handler.go
smudgelord/config/: config.go
smudgelord/database/: database.go  database_test.go
smudgelord/localization/: localization.go
smudgelord/modules/: afk.go  lastfm.go  medias.go  misc.go  start.go  stickers.go  sudoers.go
smudgelord/utils/: request.go  strings.go
(+181 files in other folders)
