[tool.poetry]
name = "SmudgeLord"
version = "1.0.0"
description = "SmudgeLord is a bot developed in Python with some fun and useful functions."
repository = "https://github.com/ruizlenato/SmudgeLord"
authors = ["ruizlenato <ruizlenato@proton.me>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = {git = "https://github.com/AmanoTeam/pyrogram", rev = "235235a6e095713b65fe8539ea4bbd6a60a4046d"}
TgCrypto = "^1.2.5"
uvloop = "^0.17.0"
aiosqlite = "^0.19.0"
yt-dlp = "^2023.7.6"
httpx = {extras = ["http2", "socks"], version = "^0.24.1"}
babel = "^2.12.1"
filetype = "^1.2.0"
humanize = "^4.6.0"
beautifulsoup4 = "^4.12.2"
esprima = "^4.0.1"
pillow = "^9.5.0"
gpytranslate = "^1.5.1"
pyaml = "^23.7.0"

[tool.ruff]
line-length = 99
show-fixes = true
target-version = "py311"
select = [
  "E", # pycodestyle
  "I", # isort
  "F", # pyflakes
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RET", # flake8-return
]
exclude = ["config.py"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff.isort]
known-first-party = ["smudge"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
