[project]
name = "SmudgeLord"
version = "1.0.0"
description = "SmudgeLord is a bot developed in Python with some fun and useful functions."
readme = "README.rst"
license = { file = "LICENSE" }
authors = [{ name = "RuizLenato", email = "ruizlenato@proton.me" }]
dependencies = [
    "pyrogram @ https://github.com/AmanoTeam/pyrogram/archive/master.zip",
    "tgcrypto>=1.2.5",
    "uvloop>=0.19.0",
    "aiosqlite>=0.19.0",
    "yt-dlp>=2023.10.13",
    "httpx[http2, socks]>=0.19.0",
    "babel>=2.13.1",
    "filetype>=1.2.0",
    "humanize>=4.8.0",
    "beautifulsoup4>=4.12.2",
    "esprima>=4.0.1",
    "gpytranslate>=1.5.1",
    "pyaml>=23.9.7",
    "sentry-sdk>=1.34.0",
    "pillow>=10.1.0",

]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/ruizlenato/SmudgeLord/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 99
show-fixes = true
target-version = "py311"
select = [
  "I", # isort
  "E", # pycodestyle
  "F", # pyflakes
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RET", # flake8-return
  "RUF",  # ruff
]

[tool.ruff.isort]
known-first-party = ["smudge"]

[tool.rye]
managed = true
